--- a/slutprojekt/package.json
+++ b/slutprojekt/package.json
@@ -2,7 +2,7 @@
   "name": "slutprojekt",
   "version": "1.0.0",
   "description": "MetaGram, an alternative to FAANG",
-  "main": "server.js",
+  "main": "build/server.js",
   "scripts": {
     "test": "nodemon server.js"
   },
@@ -19,6 +19,11 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react": "^17.0.2",
+    "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
