--- a/node_uppgifter/uppgift_meddelandeapp/package.json
+++ b/node_uppgifter/uppgift_meddelandeapp/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "socket.io": "^4.4.1"
   }
 }
